# easyrender

./: CMakeLists.txt
raytracer/: camera.h  manipulator.h  render.cpp  sceneobjects.h
src/: render.h
src/devices/windows/: device.cpp  device.h  device_windows.cpp
src/empty/: render.cpp  render.h
src/game_of_life/: life_render.cpp  render.cpp
src/mandelbrot/: mandelbrot.cpp
src/raytracer/: render.cpp  render.h  sceneobjects.h  whitted_render.cpp
src/utils/: bitmap_utils.h  camera.h  camera_manipulator.h
utils/: writebitmap.h
windows/: device.h
